changes in menu functions and icons for Dokuwiki release 2018-04-22

--- a/style.ini
+++ b/style.ini
@@ -37,6 +37,7 @@ css/design.css                        = screen
 css/content.css                       = screen
 css/pagetools.css                     = screen
 css/menu.css                          = screen
+css/adminpage.css                     = screen
 
 css/mobile.css                        = all
 css/print.css                         = print
@@ -56,29 +57,39 @@ css/print.css                         = print
 ; main text and background colors
 __text__           = "#000"                 ; @ini_text
 __background__     = "#fff"                 ; @ini_background
+
 ; alternative text and background colors
 __text_alt__       = "#444"                 ; @ini_text_alt
 __background_alt__ = "#e6e6e6"              ; @ini_background_alt
+
 ; neutral text and background colors
 __text_neu__       = "#666"                 ; @ini_text_neu
 __background_neu__ = "#f0f0f0"              ; @ini_background_neu
+
 ; border color
 __border__         = "#c0c0c0"              ; @ini_border
-__borderdark__     = "#666"                 ; @ini_border
-; pagetools
-__pagetools__      = "#fff"
-__pt_background__  = "#444"
-__pt_rollover__    = "#555"
+
 ; highlighted text (e.g. search snippets)
 __highlight__      = "#ff9"                 ; @ini_highlight
 
+; default link color
+__link__            = "#333"                ; @ini_link
 
 ;--------------------------------------------------------------------------
+
+; border color
+__borderdark__     = "#666"                 ; @ini_border
 
 ; these are used for links
 __existing__       = "#333"                 ; @ini_existing
 __missing__        = "#c33"                 ; @ini_missing
 __rollover__       = "#33c"                 ; @ini_rollover
+
+; pagetools
+__pagetools__      = "#fff"
+__pt_foreground__  = "#b9b9b9"
+__pt_background__  = "#444"
+__pt_rollover__    = "#aaa"
 
 ; widths
 __site_width__     = "74em"                 ; @ini_site_width
